Bug 384853 - Junk mail loses classification when moving to other account; r+sr=bienvenu